@@ -17,6 +17,10 @@
         app:showAsAction="ifRoom|withText"
         android:title="@string/action_upload"/>
     <item
+        android:id="@+id/action_online_users"
+        app:showAsAction="ifRoom|withText"
+        android:title="@string/online_users"/>
+    <item
         android:id="@+id/action_broadcast"
         app:showAsAction="ifRoom|withText"
         android:title="@string/action_broadcast"/>
