@@ -500,6 +500,12 @@
     <string name="action_revoke_operator">Revoke Operator</string>
     <string name="text_operator_password">Enter channel operator password</string>
     <string name="text_broadcast_message">Enter broadcast message</string>
+    <string name="online_users">Online Users</string>
 
 
+    <string name="online_user_info_nickname">Nickname</string>
+    <string name="online_user_info_username">Username</string>
+    <string name="online_user_info_channel">Channel</string>
+    <string name="online_user_info_ip">IPAddress</string>
+    <string name="online_user_info_client">Client</string>
 </resources>
